objects/MedProSC__MedPro_TestCustomObject2__c.object
<CustomObject>
    <description>A transient custom object used by the MedPro Search Connector&apos;s suite of Apex Test Classes</description>
    <fields>
        <fullName>MedProSC__MedProID__c</fullName>
        <label>MedProID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Updated_TS__c</fullName>
        <label>MedPro_Updated_TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameM2D1__c</fullName>
        <label>fieldNameM2D1</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameM2D2__c</fullName>
        <label>fieldNameM2D2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameM2D3__c</fullName>
        <label>fieldNameM2D3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameZ2D1__c</fullName>
        <label>fieldNameZ2D1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameZ2D2__c</fullName>
        <label>fieldNameZ2D2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameZ2D3__c</fullName>
        <label>fieldNameZ2D3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MedPro_TestCustomObject2</label>
    <nameField>
        <label>MedPro_TestCustomObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro_TestCustomObject2</pluralLabel>
    <recordTypes>
        <fullName>MedProSC__MedProTestCO2_RT1</fullName>
        <active>true</active>
        <label>MedProTestCO2_RT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>MedProSC__MedProTestCO2_RT2</fullName>
        <active>true</active>
        <label>MedProTestCO2_RT2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>